fix too small display of labels with <dt> #1651

--- a/media/css/jem-responsive.css
+++ b/media/css/jem-responsive.css
@@ -84,7 +84,7 @@ body.com_jem.body-overlayed {
 #jem .jem-dl dt,
 #jem .jem-dl-long dt {
     float: left;
-    width: 175px;
+    width: 275px;
     overflow: hidden;
     clear: left;
     text-align: left;
@@ -104,6 +104,10 @@ body.com_jem.body-overlayed {
     font-weight: bold;
 }
 
+#jem .jem-dl dt label span,
+#jem .jem-dl-long dt label span {
+    font-weight: normal;
+}
 
 /*Special for the description lable in editevent and editvenue*/
 
@@ -114,7 +118,7 @@ body.com_jem.body-overlayed {
 
 #jem .jem-dl dd,
 #jem .jem-dl-long dd {
-    margin-left: 170px;
+    margin-left: 240px;
     padding-top: 5px;
     padding-bottom: 5px;
     display: flow-root;
